FIX:overflow bug in tab of teamand other fixes

--- a/src/components/Home/Timeline/Timeline.css
+++ b/src/components/Home/Timeline/Timeline.css
@@ -91,6 +91,7 @@
 
 .arrows {
     display: inline !important;
+    height: 100%;
     width: 100%;
 }
 
